<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable name="viewModel" type="com.exchange.hamilton.presentation.viewmodels.HomeViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">
            <LinearLayout
                android:gravity="center"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnCurrencyConfiguration"
                    style="@style/commonButtonView"
                    android:text="@string/btn_currency_configuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="10dp">

                <TextView
                    style="@style/commonTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/approval_duration" />
                <EditText
                    android:id="@+id/numberPicker"
                    android:inputType="numberDecimal"
                    android:text='@{String.format("%s",viewModel.approvalDuration)}'
                    android:layout_width="150dp"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btnDone"
                    style="@style/commonButtonView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_done" />
            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>
</layout>